--- a/views/movies/show.erb
+++ b/views/movies/show.erb
@@ -21,5 +21,12 @@
        <% end %>
     </ul>
 
+    <a href="/movies">
+     <button type="button" name="home">Back to Movies</button>
+    </a>
+    <a href="/actors">
+      <button type="button" name="home">Back to Actors</button>
+    </a>
+
   </body>
 </html>
